--- a/BankAccount.csproj
+++ b/BankAccount.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp6.0</TargetFramework>
-		<StartupObject>BankAccount</StartupObject>
+		<StartupObject>Program</StartupObject>
   </PropertyGroup>
 
   <ItemGroup>
